Migration to the "org.ubimix" namespace.

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.webreformatter.commons</groupId>
     <parent>
-        <groupId>org.webreformatter.commons</groupId>
-        <artifactId>org.webreformatter.commons.poms</artifactId>
-        <version>1.2.0</version>
+        <groupId>org.ubimix.poms</groupId>
+        <artifactId>org.ubimix.poms.bundle</artifactId>
+        <version>1.2.1</version>
     </parent>
-    <artifactId>org.webreformatter.commons.uri</artifactId>
+    <groupId>org.ubimix.commons</groupId>
+    <artifactId>org.ubimix.commons.uri</artifactId>
     <packaging>bundle</packaging>
     <name>${project.artifactId}</name>
+    <version>1.2.1</version>
 </project>
